# task-manager

./: Dockerfile  README.md  alembic.ini  config.py  database.py  entrypoint.sh  main.py  pyproject.toml
config/: database.py  settings.py
core/: obj_str.py  pagination.py  task.py  timezone.py  user.py
models/: models.py
routers/: tasks.py  users.py
schemas/: task.py
tasks/: model.py  routers.py  services.py
user/: model.py  routers.py  schemas.py  services.py
