[project]
name = "task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "diaco",email = "shilahassanabadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "fastapi-amis-admin (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytz (>=2025.2,<2026.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
